kubernetes/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-portal
