kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: student-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: prudhveedocker/studentapp-frontend:latest
        ports:
        - containerPort: 3000  # Assuming frontend is on port 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: student-portal
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
